namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-incident-reporting-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-incident-reporting-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "incident-reporting-service-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "incident-reporting-service-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Incident Reporting Service"
    cloud-platform.justice.gov.uk/owner: "HMPPS Incident Reporting Service: incident-reporting-service@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-incident-reporting-api.git,https://github.com/ministryofjustice/hmpps-incident-reporting.git"
    cloud-platform.justice.gov.uk/team-name: "manage-safety"
